pom file update removed -preview for tests